Fix messaging attachments/webhooks
